--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/media.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="scripts/main.js"></script>
-    <script src="scripts/vendor/jquery.json.min.js"></script>
+    <link rel="stylesheet" href="css/vendor/owlcarousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/vendor/owlcarousel/owl.theme.default.min.css">
+
 </head>
 
 <body>
@@ -271,69 +271,107 @@
                 </a>
             </div>
             <div class="banner-and-tabs">
-                <div class="banner mb20">
-                    <div class="banner-left">
-                        <div class="nav-icons">
-                            <div class="arrow-prev">
-                                <span class="icon-return"></span>
+                <div class="banner-scroll">
+                    <div class="owl-carousel">
+                        <div class="banner mb20">
+                            <div class="banner-left">
+                                <div class="nav-icons">
+                                    <div class="arrow-prev ">
+                                        <span class="icon-return"></span>
+                                    </div>
+                                    <div class="arrow-fwd bne">
+                                        <span class="icon-return-copy"></span>
+                                    </div>
+                                </div>
+                                <div class="banner-text">
+                                    <p>Кресло офисное BRABIX «Space EX-508»</p>
+                                </div>
+                                <div class="banner-subtext">
+                                    <p>экокожа, хром, черное</p>
+                                </div>
+                                <div class="banner-price mb4">
+                                    <p class="banner-price-sum">12 320</p>
+                                    <span class="icon-ruble banner-price-symb"></span>
+                                </div>
+                                <div class="banner-price-subtext">
+                                    Покупка от 3 шт. доставка по всей России
+                                </div>
+                                <div class="banner-btn-container">
+                                    <div class="banner-btn">
+                                        <a href="/" class="banner-btn-text">В корзину</a>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="arrow-fwd">
-                                <span class="icon-return-copy"></span>
+                            <div class="banner-right">
+                                <img class="banner-img" src="local/assets/img/chair-banner.png">
+                                <img class="banner-img-mobile" src="local/assets/img/chair-mobile.png">
                             </div>
                         </div>
-                        <div class="banner-text">
-                            <p>Кресло офисное BRABIX «Space EX-508»</p>
-                        </div>
-                        <div class="banner-subtext">
-                            <p>экокожа, хром, черное</p>
-                        </div>
-                        <div class="banner-price mb4">
-                            <p class="banner-price-sum">12 320</p>
-                            <span class="icon-ruble banner-price-symb"></span>
-                        </div>
-                        <div class="banner-price-subtext">
-                            Покупка от 3 шт. доставка по всей России
-                        </div>
-                        <div class="banner-btn-container">
-                            <div class="banner-btn">
-                                <a href="/" class="banner-btn-text">В корзину</a>
+                        <div class="banner mb20">
+                            <div class="banner-left">
+                                <div class="nav-icons">
+                                    <div class="arrow-prev">
+                                        <span class="icon-return"></span>
+                                    </div>
+                                    <div class="arrow-fwd">
+                                        <span class="icon-return-copy"></span>
+                                    </div>
+                                </div>
+                                <div class="banner-text">
+                                    <p>Кресло офисное BRABIX «Space EX-508»</p>
+                                </div>
+                                <div class="banner-subtext">
+                                    <p>экокожа, хром, черное</p>
+                                </div>
+                                <div class="banner-price mb4">
+                                    <p class="banner-price-sum">12 320</p>
+                                    <span class="icon-ruble banner-price-symb"></span>
+                                </div>
+                                <div class="banner-price-subtext">
+                                    Покупка от 3 шт. доставка по всей России
+                                </div>
+                                <div class="banner-btn-container">
+                                    <div class="banner-btn">
+                                        <a href="/" class="banner-btn-text">В корзину</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="banner-right">
+                                <img class="banner-img" src="local/assets/img/chair-banner.png">
+                                <img class="banner-img-mobile" src="local/assets/img/chair-mobile.png">
                             </div>
                         </div>
-                    </div>
-                    <div class="banner-right">
-                        <img class="banner-img" src="local/assets/img/chair-banner.png">
-                        <img class="banner-img-mobile" src="local/assets/img/chair-mobile.png">
                     </div>
                 </div>
                 <div class="banner-tabs">
-                    <div class="banner-tabs-col">
-                        <div class="banner-tab">
-                            <div class="banner-tab-img">
-                                <img src="local/assets/img/tab-bag.png">
-                            </div>
-                            <div class="banner-tab-text">
-                                Изготовление пакетов с логотипом
-                            </div>
+                <div class="banner-tabs-col">
+                    <div class="banner-tab">
+                        <div class="banner-tab-img">
+                            <img src="local/assets/img/tab-bag.png">
+                        </div>
+                        <div class="banner-tab-text">
+                            Изготовление пакетов с логотипом
                         </div>
                     </div>
-                    <div class="banner-tabs-col">
-                        <div class="banner-tab">
-                            <div class="banner-tab-img">
-                                <img src="local/assets/img/tab-tape.png">
-                            </div>
-                            <p class="banner-tab-text">Изготовление скотча с логотипом</p>
+                </div>
+                <div class="banner-tabs-col">
+                    <div class="banner-tab">
+                        <div class="banner-tab-img">
+                            <img src="local/assets/img/tab-tape.png">
+                        </div>
+                        <p class="banner-tab-text">Изготовление скотча с логотипом</p>
+                    </div>
+                </div>
+                <div class="banner-tabs-col">
+                    <div class="banner-tab">
+                        <div class="banner-tab-img">
+                            <img src="local/assets/img/tab-box-open.png">
+                        </div>
+                        <div class="banner-tab-text">
+                            Изготовление гофрокоробок
                         </div>
                     </div>
-                    <div class="banner-tabs-col">
-                        <div class="banner-tab">
-                            <div class="banner-tab-img">
-                                <img src="local/assets/img/tab-box-open.png">
-                            </div>
-                            <div class="banner-tab-text">
-                                Изготовление гофрокоробок
-                            </div>
-                        </div>
-                    </div>
+                </div>
                 </div>
             </div>
         </div>
@@ -2743,5 +2781,10 @@
     </div>
 
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script type="text/javascript" src="scripts/main.js"></script>
+<script src="scripts/vendor/jquery.json.min.js"></script>
+<script src="scripts/vendor/owlcarousel/owl.carousel.min.js"></script>
+<script src="scripts/vendor/owlcarousel/owl.carousel.js"></script>
 
 </html>
