--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/media.css">
-    <link rel="stylesheet" href="css/vendor/owlcarousel/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/vendor/owlcarousel/owl.theme.default.min.css">
 
 </head>
 
@@ -272,7 +270,7 @@
             </div>
             <div class="banner-and-tabs">
                 <div class="banner-scroll">
-                    <div class="owl-carousel">
+                    
                         <div class="banner mb20">
                             <div class="banner-left">
                                 <div class="nav-icons">
@@ -307,7 +305,7 @@
                                 <img class="banner-img-mobile" src="local/assets/img/chair-mobile.png">
                             </div>
                         </div>
-                        <div class="banner mb20">
+                        <!-- <div class="banner mb20">
                             <div class="banner-left">
                                 <div class="nav-icons">
                                     <div class="arrow-prev">
@@ -340,8 +338,8 @@
                                 <img class="banner-img" src="local/assets/img/chair-banner.png">
                                 <img class="banner-img-mobile" src="local/assets/img/chair-mobile.png">
                             </div>
-                        </div>
-                    </div>
+                        </div> -->
+                    
                 </div>
                 <div class="banner-tabs">
                 <div class="banner-tabs-col">
