Head menu rewrite to JS

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
                             <div class="menu_drop drop-active mr40">
                                 <a class="button_grey" href="">Покупателям</a>
                                 <span class="icon-drop icon-dorp-2"></span>
+                                <div class="menu_drop_container">
+                                    <div class="menu_drop_menu">
+                                        <a class="a-blue-hover" href="">Новинки</a>
+                                        <a class="a-blue-hover" href="">Популярные товары</a>
+                                        <a class="a-blue-hover" href="">Распродажи</a>
+                                        <a class="a-blue-hover" href="">Скидки 2020</a>
+                                    </div>
+                                </div>
                             </div>
                             <div class="menu_drop drop-active mr40">
                                 <span class="icon-fire icon-head-menu"></span>
@@ -2865,7 +2873,7 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="scripts/main2.js"></script>
+    <script type="text/javascript" src="scripts/main2 (2).js"></script>
     <script src="scripts/vendor/jquery.json.min.js"></script>
     <script src="scripts/vendor/owlcarousel/owl.carousel.min.js"></script>
 </body>
