add fadeIn animate CSS

--- a/index.html
+++ b/index.html
@@ -2873,7 +2873,7 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="scripts/main2 (2).js"></script>
+    <script type="text/javascript" src="scripts/main2.js"></script>
     <script src="scripts/vendor/jquery.json.min.js"></script>
     <script src="scripts/vendor/owlcarousel/owl.carousel.min.js"></script>
 </body>
