--- a/src/index.html
+++ b/src/index.html
@@ -2829,47 +2829,61 @@
             </div>
         </div>
     </div>
-    <div data-popup-status="success" class="popup-status">
-        <a class="popup-close a-blue-hover black-text">
-            <span class="icon-close"></span>
-        </a>
-        <div class="popup-status-header mb12">
-            <div class="success-icon mr12">
-                <span class="icon-success"></span>
-            </div>
-            <div class="head-text">Ваша заявка отправлена</div>
-        </div>
+    <div data-popup-status="success" class="popup">
 
-        <div class="text-gray-14 mb30">
-            Ваша запрос был успешно отправлен! Наш менеджер свяжется с Вами в ближайшее время
-        </div>
-        <div>
-            <a class="text-close-btn">
-                Закрыть
-            </a>
+        <div class="popup-fade"></div>
+        <div class="popup-body">
+            <div class="popup-content">
+                <a class="popup-close a-blue-hover black-text">
+                    <span class="icon-close"></span>
+                </a>
+                <div class="popup-status-header mb12">
+                    <div class="success-icon mr12">
+                        <span class="icon-success"></span>
+                    </div>
+                    <div class="head-text">Ваша заявка отправлена</div>
+                </div>
+
+                <div class="text-gray-14 mb30">
+                    Ваша запрос был успешно отправлен! Наш менеджер свяжется с Вами в ближайшее время
+                </div>
+                <div>
+                    <a class="text-close-btn">
+                        Закрыть
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
+
+    <div data-popup-status="error" class="popup">
+
+        <div class="popup-fade"></div>
+        <div class="popup-body">
+            <div class="popup-content">
+                <a class="popup-close a-blue-hover black-text">
+                    <span class="icon-close"></span>
+                </a>
+                <div class="popup-status-header mb12">
+                    <div class="success-icon mr12">
+                        <span class="icon-error"></span>
+                    </div>
+                    <div class="head-text">Произошла ошибка</div>
+                </div>
+
+                <div class="text-gray-14 mb30">
+                    Мы в курсе проблемы и уже решаем ее.
+                </div>
+                <div>
+                    <a class="text-close-btn">
+                        Закрыть
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     
-    <div data-popup-status="error" class="popup-status">
-        <a class="popup-close a-blue-hover black-text">
-            <span class="icon-close"></span>
-        </a>
-        <div class="popup-status-header mb12">
-            <div class="success-icon mr12">
-                <span class="icon-error"></span>
-            </div>
-            <div class="head-text">Произошла ошибка</div>
-        </div>
-
-        <div class="text-gray-14 mb30">
-            Мы в курсе проблемы и уже решаем ее.
-        </div>
-        <div>
-            <a class="text-close-btn">
-                Закрыть
-            </a>
-        </div>
-    </div>
 
 
     <div data-popup-name="login" class="popup">
