--- a/src/index.html
+++ b/src/index.html
@@ -2755,7 +2755,7 @@
                             <p class="subtext-gray-12">г. Набережные Челны</p>
                         </div>
                         <div class="mb12">
-                            <a  data-action="callback__Popup__Open" class="standart-btn white-text a-no-hover">
+                            <a data-action="callback__Popup__Open" class="standart-btn white-text a-no-hover">
                                 Заказать звонок
                             </a>
                         </div>
@@ -2797,7 +2797,7 @@
             </div>
 
             <div class="popup-content">
-                <form id="callback-form" method="post">
+                <form data-popup-form="t" method="post">
 
                     <input data-lang="ru" class="form-field mb16 _req" type="text" placeholder="Имя" name="name">
                     <input data-lang="ru" class="form-field mb24 _req" type="text" placeholder="Фамилия" name="surname">
@@ -2891,13 +2891,11 @@
         <div class="popup-body">
             <div class="popup-head no-p">
                 <div class="tabs-block no-mb">
-
-
                     <a class="popup-close a-blue-hover black-text">
                         <span class="icon-close"></span>
                     </a>
 
-                    <div data-tab-type="login" class="tab" >
+                    <div data-tab-type="login" class="tab">
                         Вход
                     </div>
 
@@ -2911,24 +2909,25 @@
             </div>
 
             <div class="popup-content">
-                
+
                 <div data-tab-type="login" class="tab-content active">
                     <div class="mb20" name="radiobtns">
                         <label class="radio-btn mr24">
-                            <input data-radio-type='byPhone' class="radio-btn-input" name="loginType" value="phone" type="radio"
-                                checked>
+                            <input data-radio-type='byPhone' class="radio-btn-input" name="loginType" value="phone"
+                                type="radio" checked>
                             <span class="radio-btn-label"></span>
                             <span class="subtext-gray-12 radio-text">Телефон</span>
                         </label>
                         <label class="radio-btn">
-                            <input data-radio-type='byEmail' class="radio-btn-input" name="loginType" value="email" type="radio">
+                            <input data-radio-type='byEmail' class="radio-btn-input" name="loginType" value="email"
+                                type="radio">
                             <span class="radio-btn-label"></span>
                             <span class="subtext-gray-12 radio-text">E-mail</span>
                         </label>
                     </div>
                     <p class="black-text head-text mb24">Войти через</p>
 
-                    <form data-radio-content='byPhone' class="hide-popup-form">
+                    <form data-radio-content='byPhone' data-popup-form="t" class="hide-popup-form">
                         <input class="form-field mb16 _req" type="text" placeholder="Телефон" name="phone">
                         <input class="form-field mb24 _req" type="password" placeholder="Пароль" name="pswrd">
 
@@ -2937,7 +2936,7 @@
                             <a class="foot-tex no-mb a-blue-hover">Забыли пароль?</a>
                         </div>
                     </form>
-                    <form data-radio-content='byEmail' class="hide-popup-form">
+                    <form data-radio-content='byEmail' data-popup-form="t" class="hide-popup-form">
                         <input class="form-field mb16 _req" type="text" placeholder="E-mail" name="E-mail">
                         <input class="form-field mb24 _req" type="password" placeholder="Пароль" name="pswrd">
 
@@ -2948,9 +2947,9 @@
                     </form>
                 </div>
 
-                
+
                 <div data-tab-type="reg" class="tab-content">
-                    <form class="registration-form">
+                    <form data-popup-form="t" class="registration-form">
                         <input class="form-field mb16 _req" type="text" placeholder="Телефон" name="phone">
                         <input class="form-field mb16 _req" type="text" placeholder="Пароль" name="pswrd">
                         <input class="form-field mb24 _req" type="text" placeholder="Подтвердите пароль"
