start city search logic

--- a/src/index.html
+++ b/src/index.html
@@ -2989,41 +2989,41 @@
             <div class="popup-content city__select__content">
                 <div class="flex-col city__select__col mb24">
 
-                        <a class="a-blue-hover">г. Москва</a>
-                        <a class="a-blue-hover">г. Санкт-Петербург</a>
-                        <a class="a-blue-hover">г. Нижний Новгород</a>
-                        <a class="a-blue-hover">г. Казань</a>
+                        <a data-type="city-name" class="a-blue-hover">Москва</a>
+                        <a data-type="city-name" class="a-blue-hover">г. Санкт-Петербург</a>
+                        <a data-type="city-name" class="a-blue-hover">г. Нижний Новгород</a>
+                        <a data-type="city-name" class="a-blue-hover">г. Казань</a>
 
 
                 </div>
 
                 <div class="flex-col city__select__col mb24">
                     <div class="black-text head-text mb12">А</div>
-                    <a class="a-blue-hover">г. Москва</a>
-                    <a class="a-blue-hover">г. Санкт-Петербург</a>
-                    <a class="a-blue-hover">г. Нижний Новгород</a>
-                    <a class="a-blue-hover">г. Казань</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Москва</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Санкт-Петербург</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Нижний Новгород</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Казань</a>
                 </div>
                 <div class="flex-col city__select__col mb24">
                     <div class="black-text head-text mb12">А</div>
-                    <a class="a-blue-hover">г. Москва</a>
-                    <a class="a-blue-hover">г. Санкт-Петербург</a>
-                    <a class="a-blue-hover">г. Нижний Новгород</a>
-                    <a class="a-blue-hover">г. Казань</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Москва</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Санкт-Петербург</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Нижний Новгород</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Казань</a>
                 </div>
                 <div class="flex-col city__select__col mb24">
                     <div class="black-text head-text mb12">А</div>
-                    <a class="a-blue-hover">г. Москва</a>
-                    <a class="a-blue-hover">г. Санкт-Петербург</a>
-                    <a class="a-blue-hover">г. Нижний Новгород</a>
-                    <a class="a-blue-hover">г. Казань</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Москва</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Санкт-Петербург</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Нижний Новгород</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Казань</a>
                 </div>
                 <div class="flex-col city__select__col mb24">
                     <div class="black-text head-text mb12">А</div>
-                    <a class="a-blue-hover">г. Москва</a>
-                    <a class="a-blue-hover">г. Санкт-Петербург</a>
-                    <a class="a-blue-hover">г. Нижний Новгород</a>
-                    <a class="a-blue-hover">г. Казань</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Москва</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Санкт-Петербург</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Нижний Новгород</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Казань</a>
                 </div>
             </div>
 
@@ -3031,7 +3031,7 @@
                 <div class="black-text head-text">
                     Не нашли свой город?
                 </div>
-                <input class="input-search" type="text" name="search"
+                <input data-type="city-search" class="input-search" type="text" name="search"
                                 placeholder="Введите название вашего города" autocomplete="off"></input>
             </div>
 
@@ -3042,6 +3042,7 @@
     <script src="https://unpkg.com/imask"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
     <script type="text/javascript" src="scripts/modules/radioButtons.js"></script>
+    <script type="text/javascript" src="scripts/modules/search.js"></script>
     <script type="text/javascript" src="scripts/modules/popups.js"></script>
     <script type="text/javascript" src="scripts/modules/tabs.js"></script>
     <script type="text/javascript" src="scripts/modules/forms.js"></script>
